--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,7 +25,7 @@ dependencies = [
     "corner",
     "cython",
     "emcee",
-    "delight",
+    "delight @ git+https://github.com/LSSTDESC/Delight",
 ]
 
 [project.optional-dependencies]
