--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,6 +42,7 @@ requires = ["setuptools>=61", "wheel", "setuptools_scm[toml]>=6.2"]
 build-backend = "setuptools.build_meta"
 
 [tool.setuptools_scm]
+write_to = "src/rail/estimation/algos/delight_version/.version.py"
 
 [tool.coverage.run]
 source = ["src/rail"]
