--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,7 +43,15 @@ jobs:
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi	
     - name: Test with pytest
       run: |
-        python -m pytest --cov=./rail --cov-report=xml
+        python -m pytest --cov=rail.estimation.algos.delightPZ --cov-report=xml
+    - name: Upload coverage to Codecov
+      uses: codecov/codecov-action@v1
+      with:
+        file: ./coverage.xml
+        flags: unittests
+        env_vars: OS,PYTHON
+        name: codecov-umbrella
+        fail_ci_if_error: true		
     - name: Lint with pylint
       run: |
         pip install pylint
