--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,7 +43,7 @@ jobs:
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi	
     - name: Test with pytest
       run: |
-        python -m pytest tests/ --cov=delight --cov-report=xml
+        python -m pytest tests/ --cov=rail.estimation.algos.delightPZ --cov-report=xml
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v1
       with:
