--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,6 +42,10 @@ requires = [
 ]
 build-backend = "setuptools.build_meta"
 
+[tool.setuptools.packages.find]
+where = ["src"]
+include = ["rail","rail.delight","rail.estimation"]
+
 [tool.setuptools_scm]
 write_to = "src/rail/delight/_version.py"
 
